[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/gunpickup.png" type="Texture" id=1]
[ext_resource path="res://Objects/ThrownGun.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 8.70245

[sub_resource type="Animation" id=3]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0, 450.0 ]
}

[node name="ThrownGun" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource( 1 )

[node name="MainCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.382715, 0.382715 )
shape = SubResource( 2 )

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( -2.07653, -5.85202 )
rotation = 6.80849
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Thrown = SubResource( 3 )

[node name="ThrowTimer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="timeout" from="ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
